--- a/基础教程/A2-神经网络基本原理/第2步 - 线性回归/05.3-样本特征数据标准化.md
+++ b/基础教程/A2-神经网络基本原理/第2步 - 线性回归/05.3-样本特征数据标准化.md
@@ -4,7 +4,7 @@
 ## 5.3 样本特征数据标准化
 ==遇到的问题：梯度爆炸
 解决方法：数据标准化
-为什么要做标准化？对于前向传播的数值输出问题(中间的单元如sigmoid需要1数量级的输入)，反向传播的梯度更新问题(不标准化的话梯度数量级太大)，随之导致的学习率选择问题
+为什么要做标准化？提高模型的精度(所有特征即输入channel的数值范围差不多，不会有某个特征在模型占主导地位的情况)、加速模型的收敛(不归一化的话特征空间是椭圆形，走的路程更曲折)(https://www.pianshen.com/article/94221699460/)；
 标准化的方法有哪些？==
 
 数据标准化（Normalization），又可以叫做数据归一化。
